--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     compile 'us.belka:androidtoggleswitch:1.2.2'
+    compile 'link.fls:swipestack:0.3.0'
 
 }
